--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,6 +1,6 @@
-title: microbit-selection
+title: Selection
 hero_image: images/banner.png
-description: default-project-template description
+description: Using selection
 version: 4
 listed: false
 copyedit: false
